# pattern_miner

./: .gitignore  README.md  about-this-script.md  requirements.txt  setup.cfg
examples/docs/: example.md
src/pattern_miner/: aggregator.py  aggregator_semantic.py  cli.py  extractor.py  extractor_ner.py  extractor_semantic.py  miner.py  patterns.py
src/pattern_miner/schemas/: pattern.schema.json
src/pattern_miner/templates/: pattern_template.yaml
src/pattern_miner/utils/: logger.py
tests/: conftest.py  test_extractor.py  test_logger.py  test_miner.py
