[tool:pytest]
addopts = -q
testpaths = tests

[metadata]
name            = pattern_miner
version         = 0.1.0
author          = Your Name
description     = Mine Markdown repos for recurring Context–Problem–Forces–Solution patterns
license         = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir     = =src
packages        = find:
python_requires = >=3.9
install_requires =
    click>=8.0
    PyYAML>=6.0
    jsonschema>=4.21
    nltk>=3.8
    sentence-transformers>=2.6      ; move to extras if optional
    rich>=13.7

[options.entry_points]
console_scripts =
    pattern-miner = pattern_miner.cli:main

[options.extras_require]
nlp =
    sentence-transformers>=2.6
    hdbscan>=0.8
    torch>=2.2